force-app/main/default/objects/TOBJ_Participants__c/TOBJ_Participants__c.object-meta.xml
<CustomObject>
    <label>Participant</label>
    <nameField>
        <displayFormat>PN-{YYYY}{MM}-{0000}</displayFormat>
        <label>Nome do Participante</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>