force-app/main/default/objects/TOBJ_Participants__c/fields/AvailableToSuppliers__c.field-meta.xml
<CustomField>
    <fullName>AvailableToSuppliers__c</fullName>
    <formula>AND(Warning__r.PublicationDate__c &lt;= TODAY(),
    Warning__r.TCF_DueDate__c &gt;= TODAY()
)</formula>
    <label>Disponível para fornecedores?</label>
    <type>Checkbox</type>
</CustomField>