force-app/main/default/objects/TOBJ_Participants__c/fields/EmailSent__c.field-meta.xml
<CustomField>
    <fullName>EmailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E-mail enviado?</label>
    <type>Checkbox</type>
</CustomField>