force-app/main/default/objects/TOBJ_Participants__c/fields/NeedToCreateStep__c.field-meta.xml
<CustomField>
    <fullName>NeedToCreateStep__c</fullName>
    <formula>TEXT(Warning__r.TCF_RequiresConfirmation__c)</formula>
    <label>É necessário criar step de confirmação?</label>
    <type>Text</type>
</CustomField>