force-app/main/default/objects/TOBJ_Participants__c/fields/RequiredSendEmail__c.field-meta.xml
<CustomField>
    <fullName>RequiredSendEmail__c</fullName>
    <formula>TEXT(Warning__r.RequiredSendEmail__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Necessita envio de e-mail?</label>
    <type>Text</type>
</CustomField>