force-app/main/default/objects/TOBJ_Participants__c/fields/StepCreated__c.field-meta.xml
<CustomField>
    <fullName>StepCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tarefa criada?</label>
    <type>Checkbox</type>
</CustomField>