force-app/main/default/objects/TOBJ_Participants__c/fields/TCF_EmailHSEQSupplier__c.field-meta.xml
<CustomField>
    <fullName>TCF_EmailHSEQSupplier__c</fullName>
    <formula>TCF_Supplier__r.TCF_HSEQResponsibleEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E-mail Fornecedor HSEQ</label>
    <type>Text</type>
</CustomField>