force-app/main/default/objects/TOBJ_Participants__c/fields/TCF_EmailStepOwner__c.field-meta.xml
<CustomField>
    <fullName>TCF_EmailStepOwner__c</fullName>
    <formula>TCF_Supplier__r.TW1_Step_Owner__r.Contact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E-mail do Proprietário</label>
    <type>Text</type>
</CustomField>