force-app/main/default/objects/TOBJ_Participants__c/fields/TCF_StepOwner__c.field-meta.xml
<CustomField>
    <fullName>TCF_StepOwner__c</fullName>
    <formula>TCF_Supplier__r.TW1_Step_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step Owner</label>
    <type>Text</type>
</CustomField>