force-app/main/default/objects/TOBJ_Participants__c/fields/TCF_Supplier__c.field-meta.xml
<CustomField>
    <fullName>TCF_Supplier__c</fullName>
    <label>Fornecedor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Participants</relationshipLabel>
    <relationshipName>TRN_ParticipantsAccount</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>