force-app/main/default/objects/TOBJ_Participants__c/fields/ValidacaoDuplicata__c.field-meta.xml
<CustomField>
    <fullName>ValidacaoDuplicata__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Validação de duplicata</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>