force-app/main/default/objects/TOBJ_Participants__c/fields/Warning__c.field-meta.xml
<CustomField>
    <fullName>Warning__c</fullName>
    <label>Warning</label>
    <referenceTo>TOBJ_Warning__c</referenceTo>
    <relationshipLabel>Participants</relationshipLabel>
    <relationshipName>TRN_ParticipantsWarning</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>