force-app/main/default/objects/TOBJ_Participants__c/fields/WarningPublicationDate__c.field-meta.xml
<CustomField>
    <fullName>WarningPublicationDate__c</fullName>
    <formula>Warning__r.PublicationDate__c</formula>
    <label>Data de Publicação do Warning</label>
    <type>Date</type>
</CustomField>